prevent overflow in collection pages

--- a/assets/animate.css
+++ b/assets/animate.css
@@ -64,3 +64,7 @@
   pointer-events: none;
   cursor: default;
 }
+
+.rohseoul-collection {
+  overflow:hidden;
+}
